--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ jobs:
     - go: 1.10.1
       stage: deploy
       go_import_path: github.com/operator-framework/operator-sdk
+      services:
+        - docker
       install: skip
       script: skip
       before_deploy:
